test-cases/final-dump/unique_pos_error.exp
Error detected during uniqueness checking of module(s) unique_pos_error, unique_pos_error.unique_position
final-dump/unique_pos_error.wybe:15:16: Reuse of unique variable p:unique_pos_error.unique_position
